# Logistria

./: .gitignore  COMPLETE_PROJECT_AUDIT_REPORT.md  app.py  implementation_plan.md.resolved  inventory.csv  logistics_test.html  pyproject.toml  test.ipynb  test.py  test_model.py
agents/: central_orchestrator.py  inventory.py  orchestrator_agent.py  supplier_agent.py  warehouse_agent.py
data_base/: bom.csv  finished_goods_inventory.csv  inventory.csv  logistics_customers.csv  logistics_incidents.csv  logistics_log.csv  logistics_orders.csv  logistics_shipments.csv  logistics_vehicles.csv  logistics_warehouse.csv  material_planning.csv  orchestration_log.csv  orchestration_logs.csv  orchestrator_chat_log.csv  po_status_history.csv  product_master.csv  production_orders.csv  purchase_orders.csv  quality_check_log.csv  supplier_master.csv  supplier_performance.csv  supplier_product.csv  warehouse.csv  warehouse_agent_log.csv  wip_tracking.csv
execution/: event_router.py  logistics_logger.py  orchestration_logger.py  production_execution_agent.py
logistria-frontend/: README.md  app.json  babel.config.js  firebaseConfig.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
routes/: inventory_routes.py  logistics_routes.py  orchestrator_routes.py  procurement_routes.py  production_routes.py  warehouse_routes.py
services/: inventory_service.py  procurement_service.py  production_service.py  reorder_service.py  warehouse_service.py
templates/: inventory.html  logistics.html  procurement.html  production.html  warehouse.html
(+25 files in other folders)
