[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yah"
version = "0.1.0"
description = "Supply-chain orchestration service (inventory, production, procurement, logistics, warehouse)"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-cors>=4.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["__pycache__", "*.pyc"]
